# xs-project

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .gitignore  .golangci.yml  .typos.toml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  License.txt  NOTICE.txt  README.md  release.java
.cargo/: audit.toml
Spec/: Attrs.xs  CFFI.xs  Classes.xs  Collections.xs  Comments.xs  ControlFlow.xs  Data.xs  Enum.xs  FS.xs  Fs.xs  Funcitons.xs  Functions.xs  GC.xs  Generics.xs  Http.xs  Identifiers.xs  Iterator.xs  Macros.xs  Memory.xs  Modules.xs  Operators.xs  Ownership.xs  Panic.xs  Process.xs  ProjectSystem.xs  Result.xs  SearchModule.xs  Stdio.xs  Sync.xs  Thread.xs  Tuples.xs  TypeSystem.xs  Types.txt  Variables.xs  Varibles.xs  structuralAST.xs
XS/: CompilerFlow.txt  Degisiklilik.md  General.txt  Iletisim.txt  JIT.txt  XLIL.md  xs-analyzer.txt  xsproj.txt
cmake/: XSMonorepo.cmake  XSProjects.cmake  XSTests.cmake  XSTestsDirectXhir.cmake  XSTestsDirectXlil.cmake  XSTestsDirectXmir.cmake  XSTestsKotlin.cmake  XSTestsLibraries.cmake  XSTestsSourceCalls.cmake  XSTestsSourceControl.cmake  XSTestsSourceValues.cmake  llvm-toolchain.cmake
docs/: ARCHITECTURE.md  BUILDING.md  CLI.md  CONTRIBUTING.md  IMPLEMENTATION.md  LLVM_BACKEND.md  MONOREPO.md  PACKAGES.md  PROJECT_FILES.md  README.md  RELEASES.md  SPEC.md  TODO.md  XHIR.md  XLIL.md  XMIR.md
sources/: diagnostic.c  lexer.c  main.c  parser.c  project.c  syntax_ast.c  syntax_parser.c  token.c
tests/: backend_tests.c  c23_features_tests.c  cli_run_tests.c  compiler_core_bridge_tests.c  diagnostic_tests.c  hir_expression_tests.c  hir_macro_tests.c  hir_member_tests.c  hir_tests.c  hir_type_tests.c  inheritance_tests.c  (+18 more)
xs-analyzer/: Cargo.toml  README.md  eslint.config.mjs  package.json  prettier.config.mjs  rust-toolchain.toml  tsconfig.json
xs-analyzer/sources/: extension.ts  main.rs  server.rs
xs-analyzer/sources/extension/: extension.ts
xs-analyzer/sources/extension/syntaxes/: xs.tmLanguage.json
xsfmt/: .xsfmt.toml  Cargo.toml  README.md  clippy.toml  rustfmt.toml
xsfmt/.cargo/: audit.toml
xsfmt/sources/: config.rs  formatter.rs  lib.rs  main.rs
xslang/: Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
xslang/.cargo/: audit.toml
xslang/sources/: codegen.rs  compiler_core.rs  gc.rs  hir.rs  lib.rs  mir.rs  mono.rs  text_literal.rs  xgc.rs  xlil.rs
xslang/sources/codegen/: model.rs
xslang/sources/compiler_core/: direct_ir.rs  hir_lowering.rs  model.rs  test_harness.rs  xlil_lowering.rs
xslang/sources/compiler_core/hir_lowering/: call.rs  collection.rs  constructor.rs  expression_type.rs  for_each.rs  generic.rs  local_declaration.rs  match_expression.rs  method.rs  nominal.rs  program.rs  signature.rs  syntax_helpers.rs  tests.rs  tuple.rs  unary.rs
xslang/sources/gc/: address.rs  bitmap.rs  card_table.rs  model.rs  satb.rs  telemetry.rs
xslang/sources/hir/: aggregate_registry.rs  async_check.rs  collection_registry.rs  declarations.rs  generics.rs  inference.rs  match_model.rs  mir_lowering.rs  result_desugar.rs  send_sync.rs  symbols.rs  text.rs  type_check.rs
xslang/sources/hir/mir_lowering/: binary_operations.rs  binary_types.rs  call_lowering.rs  collection.rs  collection_tests.rs  control_flow.rs  control_flow_tests.rs  desugar_tests.rs  desugared.rs  diagnostic.rs  enum_value.rs  float_tests.rs  for_tests.rs  function_lowering.rs  integer_literal.rs  integer_operator_tests.rs  integer_width_tests.rs  match_tests.rs  nominal.rs  nominal_return_tests.rs  operator_tests.rs  short_circuit.rs  short_circuit_tests.rs  tuple.rs  tuple_tests.rs  unary.rs  unary_tests.rs  update.rs  value_lowering.rs  value_tests.rs
xslang/sources/hir/result_desugar/: expression_type.rs
xslang/sources/hir/text/: block_writer.rs  call_tests.rs  collection_tests.rs  conditional_tests.rs  declaration.rs  for_tests.rs  match_tests.rs  names.rs  nominal.rs  nominal_tests.rs  parameter_writer.rs  parser.rs  program.rs  statement_writer.rs  tests.rs  tuple_tests.rs
xslang/sources/hir/text/parser/: collection.rs  for_each.rs  literal.rs  match_expression.rs  nominal.rs  tuple.rs  type_parser.rs  unary.rs
xslang/sources/hir/type_check/: binary_type.rs  block_check.rs  collection_check.rs  diagnostic.rs  expression_type.rs  for_check.rs  for_each_tests.rs  match_check.rs  modules.rs  nominal_check.rs  nominal_tests.rs  result_type.rs  tests.rs  tuple.rs  type_semantics.rs  unary_type.rs
xslang/sources/mir/: model.rs  operator_optimizer_tests.rs  optimizer.rs  text.rs  verify.rs
xslang/sources/mir/model/: control_flow.rs  diagnostic.rs  integer.rs
xslang/sources/mir/optimizer/: control_flow.rs  i32_operations.rs  i64_operations.rs  integer_operations.rs
xslang/sources/mir/text/: aggregate_tests.rs  parser.rs  program.rs  storage_tests.rs  writer.rs
xslang/sources/mir/text/parser/: aggregate.rs  float.rs  i32.rs  i64.rs  integer_operation.rs  scalar.rs  string.rs
xslang/sources/mir/verify/: tests.rs
xslang/sources/mono/: model.rs
xslang/sources/text/: literal.rs  mod.rs  utf16.rs
xslang/sources/xgc/: address.rs  binding.rs  bitmap.rs  card_table.rs  heap.rs  model.rs  remembered_set.rs  roots.rs  satb.rs  selection.rs  telemetry.rs
xslang/sources/xlil/: float_operator_tests.rs  lowering.rs  model.rs  operations.rs  operator_tests.rs  parser.rs  string_comparison_tests.rs  type_names.rs  unary_tests.rs  verify.rs  writer.rs
xslang/sources/xlil/lowering/: aggregate.rs  aggregate_tests.rs  integer.rs  storage.rs  string.rs  tests.rs
xslang/sources/xlil/model/: array.rs  instruction.rs  integer.rs  types.rs
xslang/sources/xlil/parser/: aggregate.rs  aggregate_instruction.rs  array.rs  control.rs  float.rs  header.rs  i64.rs  integer_operation.rs  scalar.rs  string.rs  tests.rs
xslang/sources/xlil/verify/: composite.rs
xslang/tests/: public_xgc.rs  public_xlil.rs
xstidy/: .xstidy.toml  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
xstidy/benches/: lint.rs
xstidy/sources/: config.rs  lib.rs  lint.rs  main.rs  workspace.rs
(+468 files in other folders)
