# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.31)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(XSMonorepo)
xs_monorepo_validate_projects()
xs_monorepo_validate_runtimes()
xs_monorepo_project_enabled(xs XS_BUILD_PROJECT_XS)
xs_monorepo_project_enabled(xsproj XS_BUILD_PROJECT_XSPROJ)
if(NOT XS_BUILD_PROJECT_XS AND NOT XS_BUILD_PROJECT_XSPROJ)
  message(FATAL_ERROR "This checkout currently has buildable monorepo projects: 'xs' and 'xsproj'.")
endif()

find_program(XS_LLVM_AR_EXECUTABLE NAMES llvm-ar REQUIRED)
find_program(XS_LLVM_RANLIB_EXECUTABLE NAMES llvm-ranlib REQUIRED)
find_program(XS_LLVM_NM_EXECUTABLE NAMES llvm-nm REQUIRED)
find_program(XS_LLVM_OBJCOPY_EXECUTABLE NAMES llvm-objcopy REQUIRED)
find_program(XS_LLVM_OBJDUMP_EXECUTABLE NAMES llvm-objdump REQUIRED)
find_program(XS_LLVM_STRIP_EXECUTABLE NAMES llvm-strip REQUIRED)
find_program(XS_LLD_EXECUTABLE NAMES ld.lld REQUIRED)

function(xs_require_tool_basename variable expected)
  get_filename_component(tool_name "${${variable}}" NAME)
  if(NOT tool_name STREQUAL "${expected}")
    message(FATAL_ERROR "The X# compiler refuses GNU-compatible fallback tool '${tool_name}'; expected '${expected}'.")
  endif()
endfunction()

xs_require_tool_basename(XS_LLVM_AR_EXECUTABLE llvm-ar)
xs_require_tool_basename(XS_LLVM_RANLIB_EXECUTABLE llvm-ranlib)
xs_require_tool_basename(XS_LLVM_NM_EXECUTABLE llvm-nm)
xs_require_tool_basename(XS_LLVM_OBJCOPY_EXECUTABLE llvm-objcopy)
xs_require_tool_basename(XS_LLVM_OBJDUMP_EXECUTABLE llvm-objdump)
xs_require_tool_basename(XS_LLVM_STRIP_EXECUTABLE llvm-strip)
xs_require_tool_basename(XS_LLD_EXECUTABLE ld.lld)

set(CMAKE_AR "${XS_LLVM_AR_EXECUTABLE}" CACHE FILEPATH "LLVM archiver" FORCE)
set(CMAKE_RANLIB "${XS_LLVM_RANLIB_EXECUTABLE}" CACHE FILEPATH "LLVM archive indexer" FORCE)
set(CMAKE_NM "${XS_LLVM_NM_EXECUTABLE}" CACHE FILEPATH "LLVM symbol tool" FORCE)
set(CMAKE_OBJCOPY "${XS_LLVM_OBJCOPY_EXECUTABLE}" CACHE FILEPATH "LLVM object copier" FORCE)
set(CMAKE_OBJDUMP "${XS_LLVM_OBJDUMP_EXECUTABLE}" CACHE FILEPATH "LLVM object dumper" FORCE)
set(CMAKE_STRIP "${XS_LLVM_STRIP_EXECUTABLE}" CACHE FILEPATH "LLVM strip tool" FORCE)
set(CMAKE_LINKER "${XS_LLD_EXECUTABLE}" CACHE FILEPATH "LLVM linker" FORCE)
set(CMAKE_C_COMPILER_AR "${XS_LLVM_AR_EXECUTABLE}" CACHE FILEPATH "Clang archiver" FORCE)
set(CMAKE_C_COMPILER_RANLIB "${XS_LLVM_RANLIB_EXECUTABLE}" CACHE FILEPATH "Clang archive indexer" FORCE)

project(xs_project VERSION 0.1.3 LANGUAGES C)

file(RELATIVE_PATH XS_SOURCE_FROM_BINARY "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
cmake_path(NORMAL_PATH XS_SOURCE_FROM_BINARY)
if(XS_SOURCE_FROM_BINARY STREQUAL "")
  set(XS_SOURCE_FROM_BINARY ".")
endif()
set(XS_COMPILER_CHECK_HEADER "${XS_SOURCE_FROM_BINARY}/include/xs/compiler_check.h")
set(XS_BACKEND_TEST_OBJECT "xs_backend_test.o")

if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
  message(FATAL_ERROR "The X# compiler does not support the GNU C compiler; use the Clang preset.")
endif()
get_filename_component(XS_C_COMPILER_NAME "${CMAKE_C_COMPILER}" NAME)
if(XS_C_COMPILER_NAME MATCHES "^(gcc|g\\+\\+|cc)$")
  message(FATAL_ERROR "The X# compiler refuses GNU-style compiler driver '${XS_C_COMPILER_NAME}'; use clang.")
endif()
if(NOT CMAKE_GENERATOR MATCHES "^Ninja")
  message(FATAL_ERROR "The X# compiler requires Ninja; GNU Make and other generators are unsupported.")
endif()
if(NOT CMAKE_C_COMPILER_ID MATCHES "Clang")
  message(FATAL_ERROR "The X# compiler requires Clang.")
endif()

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
option(XS_ENABLE_SANITIZERS "Enable Clang address and undefined behavior sanitizers" OFF)
if(XS_ENABLE_SANITIZERS)
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()
if(CMAKE_C_FLAGS MATCHES "(^| )-std=gnu" OR CMAKE_C_FLAGS_DEBUG MATCHES "(^| )-std=gnu" OR
   CMAKE_C_FLAGS_RELEASE MATCHES "(^| )-std=gnu")
  message(FATAL_ERROR "GNU C dialect flags are unsupported; use strict C23.")
endif()
add_link_options(-fuse-ld=lld)

include(XSProjects)

include(CTest)
if(BUILD_TESTING)
  include(XSTests)
endif()
