# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: MPL-2.0

cmake_minimum_required(VERSION 3.31)

list(APPEND CMAKE_MODULE_PATH
  "${CMAKE_CURRENT_SOURCE_DIR}/xs/cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/xsproj/cmake"
)

if(DEFINED CMAKE_C_COMPILER)
  get_filename_component(XS_REQUESTED_C_COMPILER "${CMAKE_C_COMPILER}" NAME)
  if(XS_REQUESTED_C_COMPILER MATCHES "^(gcc|g\\+\\+|cc)(-[0-9]+)?$")
    message(FATAL_ERROR "GNU compiler drivers are unsupported; use Clang.")
  endif()
endif()

find_program(XS_CLANG_EXECUTABLE NAMES clang REQUIRED)
find_program(XS_LLVM_AR_EXECUTABLE NAMES llvm-ar REQUIRED)
find_program(XS_LLVM_RANLIB_EXECUTABLE NAMES llvm-ranlib REQUIRED)
find_program(XS_LLVM_NM_EXECUTABLE NAMES llvm-nm REQUIRED)
find_program(XS_LLVM_OBJCOPY_EXECUTABLE NAMES llvm-objcopy REQUIRED)
find_program(XS_LLVM_OBJDUMP_EXECUTABLE NAMES llvm-objdump REQUIRED)
find_program(XS_LLVM_STRIP_EXECUTABLE NAMES llvm-strip REQUIRED)
find_program(XS_LLD_EXECUTABLE NAMES ld.lld REQUIRED)

function(xs_require_tool_identity variable identity)
  execute_process(COMMAND "${${variable}}" --version
                  RESULT_VARIABLE status
                  OUTPUT_VARIABLE output
                  ERROR_VARIABLE error
                  OUTPUT_STRIP_TRAILING_WHITESPACE
                  ERROR_STRIP_TRAILING_WHITESPACE)
  if(NOT status EQUAL 0 OR NOT "${output}\n${error}" MATCHES "${identity}")
    message(FATAL_ERROR "Tool '${${variable}}' does not identify itself as ${identity}.")
  endif()
endfunction()

foreach(tool IN ITEMS XS_LLVM_AR_EXECUTABLE XS_LLVM_RANLIB_EXECUTABLE XS_LLVM_NM_EXECUTABLE
                      XS_LLVM_OBJCOPY_EXECUTABLE XS_LLVM_OBJDUMP_EXECUTABLE XS_LLVM_STRIP_EXECUTABLE)
  xs_require_tool_identity(${tool} LLVM)
endforeach()
xs_require_tool_identity(XS_LLD_EXECUTABLE LLD)

set(CMAKE_C_COMPILER "${XS_CLANG_EXECUTABLE}" CACHE FILEPATH "Clang C compiler" FORCE)
set(CMAKE_AR "${XS_LLVM_AR_EXECUTABLE}" CACHE FILEPATH "LLVM archiver" FORCE)
set(CMAKE_RANLIB "${XS_LLVM_RANLIB_EXECUTABLE}" CACHE FILEPATH "LLVM archive indexer" FORCE)
set(CMAKE_NM "${XS_LLVM_NM_EXECUTABLE}" CACHE FILEPATH "LLVM symbol tool" FORCE)
set(CMAKE_OBJCOPY "${XS_LLVM_OBJCOPY_EXECUTABLE}" CACHE FILEPATH "LLVM object copier" FORCE)
set(CMAKE_OBJDUMP "${XS_LLVM_OBJDUMP_EXECUTABLE}" CACHE FILEPATH "LLVM object dumper" FORCE)
set(CMAKE_STRIP "${XS_LLVM_STRIP_EXECUTABLE}" CACHE FILEPATH "LLVM strip tool" FORCE)
set(CMAKE_LINKER "${XS_LLD_EXECUTABLE}" CACHE FILEPATH "LLVM linker" FORCE)
set(CMAKE_C_COMPILER_AR "${XS_LLVM_AR_EXECUTABLE}" CACHE FILEPATH "Clang archiver" FORCE)
set(CMAKE_C_COMPILER_RANLIB "${XS_LLVM_RANLIB_EXECUTABLE}" CACHE FILEPATH "Clang archive indexer" FORCE)

set(XS_MONOREPO_STABLE_PROJECTS xs xsproj)
set(XS_MONOREPO_FUTURE_PROJECTS xslang xsfmt xstidy xs-analyzer)
set(XS_MONOREPO_STABLE_RUNTIMES)
set(XS_MONOREPO_FUTURE_RUNTIMES xsrt)
set(XS_ENABLE_PROJECTS "xs" CACHE STRING "Semicolon-separated monorepo projects, or 'all'.")
set(XS_ENABLE_RUNTIMES "" CACHE STRING "Semicolon-separated monorepo runtimes, or 'all'.")

function(xs_monorepo_normalize_list out_variable input_items all_items)
  if("${input_items}" STREQUAL "all")
    set(${out_variable} ${all_items} PARENT_SCOPE)
    return()
  endif()
  string(REPLACE "," ";" normalized "${input_items}")
  set(result)
  foreach(item_name IN LISTS normalized)
    string(STRIP "${item_name}" item_name)
    if(NOT item_name STREQUAL "")
      list(APPEND result "${item_name}")
    endif()
  endforeach()
  set(${out_variable} ${result} PARENT_SCOPE)
endfunction()

function(xs_monorepo_validate_projects)
  xs_monorepo_normalize_list(enabled "${XS_ENABLE_PROJECTS}" "${XS_MONOREPO_STABLE_PROJECTS}")
  if(NOT enabled)
    message(FATAL_ERROR "XS_ENABLE_PROJECTS must name at least one project.")
  endif()
  foreach(name IN LISTS enabled)
    if(name IN_LIST XS_MONOREPO_STABLE_PROJECTS)
      continue()
    elseif(name IN_LIST XS_MONOREPO_FUTURE_PROJECTS)
      message(FATAL_ERROR "Monorepo project '${name}' is registered but not buildable yet.")
    endif()
    message(FATAL_ERROR "Unknown monorepo project '${name}'.")
  endforeach()
  set(XS_ENABLED_PROJECTS ${enabled} CACHE INTERNAL "Normalized monorepo projects")
endfunction()

function(xs_monorepo_validate_runtimes)
  xs_monorepo_normalize_list(enabled "${XS_ENABLE_RUNTIMES}" "${XS_MONOREPO_STABLE_RUNTIMES}")
  foreach(name IN LISTS enabled)
    if(name IN_LIST XS_MONOREPO_STABLE_RUNTIMES)
      continue()
    elseif(name IN_LIST XS_MONOREPO_FUTURE_RUNTIMES)
      message(FATAL_ERROR "Monorepo runtime '${name}' is registered but not buildable yet.")
    endif()
    message(FATAL_ERROR "Unknown monorepo runtime '${name}'.")
  endforeach()
  set(XS_ENABLED_RUNTIMES ${enabled} CACHE INTERNAL "Normalized monorepo runtimes")
endfunction()

function(xs_monorepo_project_enabled name out_variable)
  if(name IN_LIST XS_ENABLED_PROJECTS)
    set(${out_variable} TRUE PARENT_SCOPE)
  else()
    set(${out_variable} FALSE PARENT_SCOPE)
  endif()
endfunction()

function(xs_validate_llvm_toolchain)
  get_filename_component(compiler_name "${CMAKE_C_COMPILER}" NAME)
  if(NOT CMAKE_C_COMPILER_ID MATCHES "Clang" OR NOT compiler_name MATCHES "^clang(-[0-9]+)?$")
    message(FATAL_ERROR "The X# compiler requires Clang.")
  endif()
  if(NOT CMAKE_GENERATOR MATCHES "^Ninja")
    message(FATAL_ERROR "The X# compiler requires Ninja.")
  endif()
  if(CMAKE_C_FLAGS MATCHES "(^| )-std=gnu" OR CMAKE_C_FLAGS_DEBUG MATCHES "(^| )-std=gnu" OR
     CMAKE_C_FLAGS_RELEASE MATCHES "(^| )-std=gnu")
    message(FATAL_ERROR "GNU C dialect flags are unsupported; use strict C23.")
  endif()
  add_link_options(-fuse-ld=lld)
endfunction()

xs_monorepo_validate_projects()
xs_monorepo_validate_runtimes()
xs_monorepo_project_enabled(xs XS_BUILD_PROJECT_XS)
xs_monorepo_project_enabled(xsproj XS_BUILD_PROJECT_XSPROJ)
if(NOT XS_BUILD_PROJECT_XS AND NOT XS_BUILD_PROJECT_XSPROJ)
  message(FATAL_ERROR "This checkout currently has buildable monorepo projects: 'xs' and 'xsproj'.")
endif()

project(xs_project VERSION 0.2.0 LANGUAGES C)
xs_validate_llvm_toolchain()

file(RELATIVE_PATH XS_SOURCE_FROM_BINARY "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
cmake_path(NORMAL_PATH XS_SOURCE_FROM_BINARY)
if(XS_SOURCE_FROM_BINARY STREQUAL "")
  set(XS_SOURCE_FROM_BINARY ".")
endif()
set(XS_COMPILER_CHECK_HEADER "${XS_SOURCE_FROM_BINARY}/include/xs/compiler_check.h")
set(XS_BACKEND_TEST_OBJECT "xs_backend_test.o")

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
option(XS_ENABLE_SANITIZERS "Enable Clang address and undefined behavior sanitizers" OFF)
if(XS_ENABLE_SANITIZERS)
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()

if(XS_BUILD_PROJECT_XS OR XS_BUILD_PROJECT_XSPROJ)
  add_subdirectory(xsproj "${CMAKE_CURRENT_BINARY_DIR}/projects/xsproj")
endif()
if(XS_BUILD_PROJECT_XS)
  add_subdirectory(xs "${CMAKE_CURRENT_BINARY_DIR}/projects/xs")
endif()

include(CTest)
if(BUILD_TESTING)
  include(XSTests)
endif()
