# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xs-analyzer"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "xs-analyzer"
path = "sources/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
