# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xs-analyzer"
version = "0.1.1"
edition = "2024"
publish = false

[[bin]]
name = "xs-analyzer"
path = "sources/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.53", features = ["full"] }
lsp-server = "0.10"
lsp-types = "0.97"
rowan = "0.16"
