# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "xsfmt"
version = "0.1.1"
edition = "2024"
publish = false

[[bin]]
name = "xsfmt"
path = "sources/main.rs"

[lib]
path = "sources/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
