# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xslang"
version = "0.2.0"
edition = "2024"
authors = ["Leitwolf <xs-lang.chess031@slmails.com>"]
description = "Target-independent semantic analysis and IR core for the X# compiler"
license = "Apache-2.0"
repository = "https://github.com/xss-lang/xs-project"
homepage = "https://github.com/xss-lang/xs-project"
readme = "README.md"
documentation = "https://docs.rs/xslang"
keywords = ["compiler", "xsharp", "compiler-ir", "xlil"]
categories = ["compilers"]
exclude = ["target/"]

[lib]
name = "xslang"
path = "sources/lib.rs"
crate-type = ["rlib", "staticlib"]
bench = false

[dependencies]
bit-set = "0.11.1"
indexmap = "2.14.0"
miette = { version = "7.6.0", features = ["derive"] }
parking_lot = "0.12.5"
petgraph = "0.8.3"
thiserror = "2.0.18"
typed-arena = "2.0.2"

[dev-dependencies]
criterion = "0.8.2"

[package.metadata.xs]
component = "compiler-core"
syntax-abi-version = 0
xhir-version = 0
xmir-version = 0
xlil-version = 0
