# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xslang"
version = "0.2.0"
edition = "2024"
build = "build.rs"
authors = ["Leitwolf <xs-lang.chess031@slmails.com>"]
description = "Target-independent semantic analysis and IR core for the X# compiler"
license = "Apache-2.0"
repository = "https://github.com/xss-lang/xs-project"
homepage = "https://github.com/xss-lang/xs-project"
readme = "README.md"
documentation = "https://docs.rs/xslang"
keywords = ["compiler", "xsharp", "compiler-ir", "xlil"]
categories = ["compilers"]
exclude = ["target/"]

[lib]
name = "xslang"
path = "sources/lib.rs"
crate-type = ["rlib", "staticlib"]
bench = false

[dependencies]
bit-set = "0.11"
indexmap = "2.14"
rustc-hash = "2"
smallvec = "1.15"
arrayvec = "0.7"
miette = { version = "7.6", features = ["fancy", "derive"] }
ariadne = "0.6"
parking_lot = "0.12"
petgraph = "0.8"
thiserror = "2.0"
typed-arena = "2.0"
bitflags = "2.13"
camino = "1.2"
lasso = "0.7"

[dev-dependencies]
proptest = "1.11"
insta = "1.48"
criterion = "0.8"
libfuzzer-sys = "0.4"

[package.metadata.xs]
component = "compiler-core"
syntax-abi-version = 0
xhir-version = 0
xmir-version = 0
xlil-version = 0

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
