# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xstidy"
version = "0.1.1"
edition = "2024"
publish = false

[[bin]]
name = "xstidy"
path = "sources/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
