# SPDX-FileCopyrightText: 2026 Leitwolf <xs-lang.chess031@slmails.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "xstidy"
version = "0.1.1"
edition = "2024"
publish = false

[[bin]]
name = "xstidy"
path = "sources/main.rs"

[[bench]]
name = "lint"
harness = false

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.6.4", features = ["derive"] }
codespan = "0.13.1"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"

[lib]
path = "sources/lib.rs"

[dev-dependencies]
criterion = "0.8.2"
